<resources>
    <string name="app_name">Notas Programación</string>
    <string name="presencial">Presencial</string>
    <string name="semipresencial">Semipresencial</string>
    <string name="nombre">Nombre</string>
    <string name="indroduzca_el_nombre_del_alumno">Indroduzca el nombre del alumno</string>
    <string name="fecha">Fecha:</string>
    <string name="d_a">Día</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="calcular">Calcular</string>
    <string name="eval1">Eval1:</string>
    <string name="eval2">Eval2:</string>
    <string name="eval3">Eval3:</string>

    <!-- DESCRIPTIONS -->
    <string name="note_description_insuficient">Insuficiente</string>
    <string name="note_description_suficient">Suficiente</string>
    <string name="note_description_good">Bien</string>
    <string name="note_description_excelent">Sobresaliente</string>
</resources>